--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -78,7 +78,7 @@
                   <span class="font-semibold text-blue-600">${{ rifa.precioTicketUSD }} por boleto</span>
                   <span [class.text-red-600]="rifa.ticketsDisponibles === 0" 
                         [class.font-bold]="rifa.ticketsDisponibles === 0">
-                    {{ rifa.ticketsDisponibles }} disponibles
+                    Tickets disponibles
                   </span>
                 </div>
                 <p class="mt-3 mb-4 text-sm text-gray-600 dark:text-gray-400">
